# wolf_apriltag

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  license_exclude.txt
cmake_modules/: Findwolfapriltagw.cmake  Findwolfvision.cmake  wolfapriltagConfig.cmake  wolfapriltagConfig.cmake.in
demos/: CMakeLists.txt  demo_apriltag.cpp  map_apriltag_1.yaml  map_apriltag_save.yaml  processor_tracker_landmark_apriltag.yaml
demos/maps/: map_apriltag_logitech_1234.yaml
hello_plugin/: hello_plugin.cpp  params_autoconf.cpp
include/apriltag/common/: apriltag.h
include/apriltag/factor/: factor_apriltag.h  factor_apriltag_proj.h  factor_autodiff_apriltag.h
include/apriltag/feature/: feature_apriltag.h  feature_apriltag_pose.h  feature_apriltag_proj.h
include/apriltag/landmark/: landmark_apriltag.h
include/apriltag/processor/: ippe.h  processor_tracker_landmark_apriltag.h
include/base/feature/: feature_base.h
src/: problem.cpp
src/examples/: test_apriltag.cpp  test_processor_tracker_feature.cpp
src/feature/: feature_apriltag.cpp  feature_apriltag_pose.cpp  feature_apriltag_proj.cpp
src/landmark/: landmark_apriltag.cpp
src/processor/: ippe.cpp  processor_tracker_feature.cpp  processor_tracker_landmark.cpp  processor_tracker_landmark_apriltag.cpp
src/yaml/: processor_tracker_landmark_apriltag_yaml.cpp
test/: CMakeLists.txt  camera_params_canonical.yaml  gtest_capture_base.cpp  gtest_emplace.cpp  gtest_factor_apriltag.cpp  gtest_factor_apriltag_proj.cpp  gtest_factor_autodiff_apriltag.cpp  gtest_factor_autodiff_distance_3D.cpp  gtest_feature_apriltag.cpp  gtest_feature_apriltag_pose.cpp  gtest_feature_apriltag_proj.cpp  gtest_features_apriltag.cpp  gtest_landmark_apriltag.cpp  gtest_processor_tracker_landmark_apriltag.cpp  processor_tracker_landmark_apriltag.yaml
