# Retrieve googletest from github & compile
add_subdirectory(gtest)

wolf_add_gtest(gtest_feature_apriltag gtest_feature_apriltag.cpp)

wolf_add_gtest(gtest_landmark_apriltag gtest_landmark_apriltag.cpp)

wolf_add_gtest(gtest_processor_tracker_landmark_apriltag gtest_processor_tracker_landmark_apriltag.cpp)
